--- a/Introducao_a_filoinformatica.Rmd
+++ b/Introducao_a_filoinformatica.Rmd
@@ -729,8 +729,8 @@ edges <- data.frame(
   
 )
 
-graph <- visNetwork::visNetwork(nodes, edges)
-graph
+graph2 <- visNetwork::visNetwork(nodes, edges)
+graph2
 
 
 ```
