--- a/myBib.bib
+++ b/myBib.bib
@@ -344,3 +344,53 @@
     pages = {5--13},
     year = 2002
 }
+
+@article{Gastauer2017,
+  doi = {10.1590/0102-33062016abb0306},
+  url = {https://doi.org/10.1590/0102-33062016abb0306},
+  year = {2017},
+  month = jun,
+  publisher = {{FapUNIFESP} ({SciELO})},
+  volume = {31},
+  number = {2},
+  pages = {191--198},
+  author = {Markus Gastauer and Jo{\~{a}}o Augusto Alves Meira Neto},
+  title = {Updated angiosperm family tree for analyzing phylogenetic diversity and community structure},
+  journal = {Acta Botanica Brasilica}
+}
+
+@article{Li2021,
+  doi = {10.1186/s12915-021-01166-2},
+  url = {https://doi.org/10.1186/s12915-021-01166-2},
+  year = {2021},
+  month = oct,
+  publisher = {Springer Science and Business Media {LLC}},
+  volume = {19},
+  number = {1},
+  author = {Hong-Tao Li and Yang Luo and Lu Gan and Peng-Fei Ma and Lian-Ming Gao and Jun-Bo Yang and Jie Cai and Matthew A. Gitzendanner and Peter W. Fritsch and Ting Zhang and Jian-Jun Jin and Chun-Xia Zeng and Hong Wang and Wen-Bin Yu and Rong Zhang and Michelle van der Bank and Richard G. Olmstead and Peter M. Hollingsworth and Mark W. Chase and Douglas E. Soltis and Pamela S. Soltis and Ting-Shuang Yi and De-Zhu Li},
+  title = {Plastid phylogenomic insights into relationships of all flowering plant families},
+  journal = {{BMC} Biology}
+}
+
+@article{Johnson2018,
+  doi = {10.1093/sysbio/syy086},
+  url = {https://doi.org/10.1093/sysbio/syy086},
+  year = {2018},
+  month = dec,
+  publisher = {Oxford University Press ({OUP})},
+  volume = {68},
+  number = {4},
+  pages = {594--606},
+  author = {Matthew G Johnson and Lisa Pokorny and Steven Dodsworth and Laura R Botigu{\'{e}} and Robyn S Cowan and Alison Devault and Wolf L Eiserhardt and Niroshini Epitawalage and F{\'{e}}lix Forest and Jan T Kim and James H Leebens-Mack and Ilia J Leitch and Olivier Maurin and Douglas E Soltis and Pamela S Soltis and Gane Ka-shu Wong and William J Baker and Norman J Wickett},
+  editor = {Susanne Renner},
+  title = {A Universal Probe Set for Targeted Sequencing of 353 Nuclear Genes from Any Flowering Plant Designed Using k-Medoids Clustering},
+  journal = {Systematic Biology}
+}
+
+@misc{wikiCirculoViena,
+    author = "{Wikipedia contributors}",
+    title = "C\'{i}rculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
+    year = "2022",
+    url = "https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena",
+    note = "[Online; accessed 15-September-2022]"
+}
