--- a/Introducao_a_filoinformatica.Rmd
+++ b/Introducao_a_filoinformatica.Rmd
@@ -77,18 +77,18 @@ Para uma aprofundada análise da história da classificação biológica...
 
 - Taxonomia evolutiva [Gradismo]: Genealogia e similaridade adaptativa
 
-- Fenética: Similaridade total
+- Taxonomia numérica [Fenética]: Similaridade total
 
-> We live in a world of stridently competing commercial messages,
+  > We live in a world of stridently competing commercial messages,
 pressed upon us in favor of one product or another. High-pressure
 salesmanship and hyperbole are not restricted to the world of
 business. In fact, "success in science depends not only on rational
 argument but on a mixture of subterfuge, rhetoric, and propaganda"
 (attributed to Feyerabend by Broad 1979).
->
-> Moss, W.W., 1983. Taxa Taxonomists, and Taxonomy. *Numerical Taxonomy*, 72–75. [doi:10.1007/978-3-642-69024-2_8](doi:10.1007/978-3-642-69024-2_8)
+  >
+  > Moss, W.W., 1983. Taxa Taxonomists, and Taxonomy. *Numerical Taxonomy*, 72–75. [doi:10.1007/978-3-642-69024-2_8](doi:10.1007/978-3-642-69024-2_8)
 
-> **Taxonomists**. Taxonomists have always had the reputation of being
+  > **Taxonomists**. Taxonomists have always had the reputation of being
 difficult. Intransigence may be rooted in the necessity of defending
 prolonged self-immersion in a taxon that others find a total bore; it
 is frustrating to have one's life work greeted with a yawn. Numerical
@@ -101,15 +101,15 @@ certainly provide a fine example of its seamier side. If Feyerabend
 is correct, it may be even a requirement of human nature that
 scientific progress occur in this manner. Nevertheless, numerical
 taxonomists are part of a larger community of systematic and evolutionary biologists, and of biology as a whole.
->
-> Moss, W.W., 1983. Taxa Taxonomists, and Taxonomy. *Numerical Taxonomy*, 72–75. [doi:10.1007/978-3-642-69024-2_8](doi:10.1007/978-3-642-69024-2_8)
+  >
+  > Moss, W.W., 1983. Taxa Taxonomists, and Taxonomy. *Numerical Taxonomy*, 72–75. [doi:10.1007/978-3-642-69024-2_8](doi:10.1007/978-3-642-69024-2_8)
 
-- Cladística: Genealogia
+- Filogeneticistas [Cladística]: Genealogia
 
 
 ![](images/systematics_war.png)
 
-Não deixe de conferir o livro de Ernst Mayr: `Isto é biologia: a ciência do mundo vivo`
+Não deixe de conferir o livro de Ernst Mayr: `Isto é biologia: a ciência do mundo vivo` para aprofundar os conhecimentos sobre a história da Biologia e das classificações biológicas.
 
 :::: {style="display: flex;"}
 
@@ -195,7 +195,7 @@ A informática se desdobra no conhecimento humano a partir de uma racionalidade 
   - Foi aluno de Bertrand Russel.
   - Em 1948, Wiener publicou o livro `Cibernética: ou Controle e Comunicação no Animal e na Máquina`:
 
-![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Capa_cibernetica.jpg/220px-Capa_cibernetica.jpg)
+  ![](https://upload.wikimedia.org/wikipedia/commons/thumb/6/60/Capa_cibernetica.jpg/220px-Capa_cibernetica.jpg)
 
   - A cibernética é o estudo interdisciplinar da estrutura dos sistemas reguladores, suas estruturas, restrições e possibilidades. Norbert Wiener definiu a cibernética em 1948 como "o estudo científico do controle e comunicação no animal e na máquina" `r Cite(referencias, "wikiCibernetica")`.
 
@@ -978,13 +978,13 @@ Finalmente, conheceremos o programa `Biodiverse GUI`, que realiza diversos tipos
 
 ### História do sequenciamento didesoxi Sanger
 
-O sequenciador ABI utiliza o método de sequenciamento tradicional, proposto por Frederick e Sanger na década de 70, para gerar sequências entre 300 e 850pb. Na reação de sequenciamento são utilizados, além dos nucleotídeos comuns, nucleotídeos modificados e marcados com fluorescência, chamados dideoxirribonucleotídeos. Cada nucleotídeo (A, C, G,T) é marcado com um fluoróforo distinto. Durante a reação de extensão do fragmento de DNA, quando um nucleotídeo modificado é incorporado ao fragmento, o que ocorre de forma aleatória, a reação é interrompida. Os fragmentos de DNA gerados serão, portanto, de tamanhos diversos. Depois de separados por eletroforese capilar, uma câmera CCD acoplada ao equipamento irá identificar a fluorescência emitida pelo nucleotídeo marcado e assim caracterizá-lo. https://www.einstein.br/pesquisa/pesquisa-experimental/plataformas/plataforma-sequenciamento
+O sequenciador ABI utiliza o método de sequenciamento tradicional, proposto por Frederick e Sanger na década de 70, para gerar sequências entre 300 e 850pb. Na reação de sequenciamento são utilizados, além dos nucleotídeos comuns, nucleotídeos modificados e marcados com fluorescência, chamados dideoxirribonucleotídeos. Cada nucleotídeo (A, C, G,T) é marcado com um fluoróforo distinto. Durante a reação de extensão do fragmento de DNA, quando um nucleotídeo modificado é incorporado ao fragmento, o que ocorre de forma aleatória, a reação é interrompida. Os fragmentos de DNA gerados serão, portanto, de tamanhos diversos. Depois de separados por eletroforese capilar, uma câmera CCD acoplada ao equipamento irá identificar a fluorescência emitida pelo nucleotídeo marcado e assim caracterizá-lo (https://www.einstein.br/pesquisa/pesquisa-experimental/plataformas/plataforma-sequenciamento).
 
 ![](images/sequenciamento.png)
 
 - Os princípios de replicação do DNA foram usados por Sanger et al. no desenvolvimento do processo agora conhecido como sequenciamento didesoxi Sanger.
 
-- Esse processo aproveita a capacidade da DNA polimerase de incorporar 2',3'-didesoxinucleotídeos -- análogos de bases nucleotídicas que não possuem o grupo 3'-hidroxila essencial na formação da ligação fosfodiéster [DNA Sequencing by Capillary Electrophoresis 3ed](https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf).
+- Esse processo aproveita a capacidade da DNA polimerase de incorporar 2',3'-didesoxinucleotídeos -- análogos de bases nucleotídicas que não possuem o grupo 3'-hidroxila essencial na formação da ligação fosfodiéster ([DNA Sequencing by Capillary Electrophoresis 3ed](https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf)).
 
 - O sequenciamento de didesoxi Sanger requer um molde de DNA, um *primer* de sequenciamento, DNA polimerase, desoxinucleotídeos (dNTPs), didesoxinucleotídeos (ddNTPs) e tampão de reação.
 
@@ -996,11 +996,11 @@ O sequenciador ABI utiliza o método de sequenciamento tradicional, proposto por
   - A DNA polimerase adiciona um desoxinucleotídeo ou o correspondente 2',3'-didesoxinucleotídeo em cada etapa da extensão da cadeia.
   - A adição de um desoxinucleotídeo ou um didesoxinucleotídeo depende da concentração relativa de ambas as moléculas. Quando um desoxinucleotídeo (A, C, G ou T) é adicionado à extremidade 3', a extensão da cadeia pode continuar. No entanto, quando um didesoxinucleotídeo (ddA, ddC, ddG ou ddT) é adicionado à extremidade 3', a extensão da cadeia termina. O sequenciamento dideoxy Sanger resulta na formação de produtos de extensão de vários comprimentos terminados com dideoxynucleotídeos no final de 3'.
 
-O sequenciador ABI (*Applied Biosystems*) é um instrumento baseado em laser que utiliza marcadores fluorescentes para analisar os produtos de uma reação de sequenciamento à medida que migram através de um gel. Depois que os dados são coletados a partir de uma execução de sequenciamento, o programa Analysis identifica e rastreia as pistas de amostra do gel e, subsequentemente, normaliza e integra os dados brutos (*raw data*) em um cromatograma da sequência final. Para o usuário, há são basicamente dois tipos de arquivos que podem ser manipulados para melhorar potencialmente os resultados da análise. O Gel O arquivo consiste em uma imagem gerada por computador do gel de sequenciamento com os padrões de bandas de DNA fluorescentes. Esta imagem permite ao usuário visualizar e editar as linhas de rastreamento geradas e usadas pelo Analysis para coletar pontos de dados para cada amostra. Arquivos de amostra individuais são armazenados para cada uma das amostras analisadas e incluir o cromatograma, dados brutos e anotações e informações sobre a amostra e a sequência corre. Geralmente, os produtos de uma reação de sequenciamento são facilmente resolvidos e o software Analysis interpreta a sequência de nucleotídeos correta. Chamadas de base ambíguas tendem a ocorrer perto do final da sequência e podem ser editados ou excluídos pelo usuário antes de exportar os dados para outras comparações ou alinhamentos. Ocasionalmente, as linhas de rastreamento dentro da imagem do gel podem precisar ser ajustadas ou movidas. Os dados da amostra são em seguida, reextraído do Arquivo de Gel e analisado novamente. Esta revisão explica a operação geral do Analysis em termos de visualização e edição de um cromatograma, refazendo o rastreamento das pistas de um arquivo de gel e analisando o dados da amostra final `r Citet(referencias, "Hagemann1999")`.
+O sequenciador ABI (*Applied Biosystems*) é um instrumento baseado em laser que utiliza marcadores fluorescentes para analisar os produtos de uma reação de sequenciamento à medida que migram através de um gel. Depois que os dados são coletados a partir de uma execução de sequenciamento, o programa Analysis identifica e rastreia as pistas de amostra do gel e, subsequentemente, normaliza e integra os dados brutos (*raw data*) em um cromatograma da sequência final. Para o usuário, há são basicamente dois tipos de arquivos que podem ser manipulados para melhorar potencialmente os resultados da análise. O Gel O arquivo consiste em uma imagem gerada por computador do gel de sequenciamento com os padrões de bandas de DNA fluorescentes. Esta imagem permite ao usuário visualizar e editar as linhas de rastreamento geradas e usadas pelo Analysis para coletar pontos de dados para cada amostra. Arquivos de amostra individuais são armazenados para cada uma das amostras analisadas e incluir o cromatograma, dados brutos e anotações e informações sobre a amostra e a sequência corre. Geralmente, os produtos de uma reação de sequenciamento são facilmente resolvidos e o software Analysis interpreta a sequência de nucleotídeos correta. Chamadas de base ambíguas tendem a ocorrer perto do final da sequência e podem ser editados ou excluídos pelo usuário antes de exportar os dados para outras comparações ou alinhamentos. Ocasionalmente, as linhas de rastreamento dentro da imagem do gel podem precisar ser ajustadas ou movidas. Os dados da amostra são em seguida, reextraído do Arquivo de Gel e analisado novamente. Esta revisão explica a operação geral do Analysis em termos de visualização e edição de um cromatograma, refazendo o rastreamento das pistas de um arquivo de gel e analisando o dados da amostra final `r Cite(referencias, "Hagemann1999")`.
 
 # Montagem de sequências
 
-A primeira etapa computacional de uma análise filogenética é a montagem das sequências (sequence assembly) de cada um dos terminais a partir dos cromatogramas de cada *primer* sequenciado.
+A primeira etapa computacional de uma análise filogenética é a montagem das sequências (*sequence assembly*) de cada um dos terminais a partir dos cromatogramas de cada *primer* sequenciado.
 
 ## Cromatogramas
 
@@ -1048,7 +1048,7 @@ O arquivo `.ab1` são gerados pelos sequenciadores da *Applied Biosystems*. Outr
 
 Dois programas foram desenvolvidos especialmente para visualizar os cromatogramas:
 
-- [Chromas](http://technelysium.com.au/wp/chromas) FitchTV
+- [Chromas](http://technelysium.com.au/wp/chromas)
 - [FinchTV](https://finchtv.software.informer.com/1.4)
 
 ### Software FitchTV
@@ -1073,7 +1073,9 @@ O [FinchTV 1.4](https://finchtv.software.informer.com/1.4) é um programa open-s
 
 ### Manual do sequenciamento Sanger
 
-Diversos fatores podem resultar em baixa resolução do sinal. Observe o capítulo 8 (*Troubleshooting*) do guia da *Applied Biosystems* para entender alguns dos principais problemas no sequenciamento: [DNA Sequencing by Capillary Electrophoresis 3ed](https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf).
+Diversos fatores podem resultar em baixa resolução do sinal. Observe o capítulo 8 (*Troubleshooting*) do guia da *Applied Biosystems* para entender alguns dos principais problemas no sequenciamento: 
+
+[DNA Sequencing by Capillary Electrophoresis 3ed](https://www.ramaciotti.unsw.edu.au/sites/default/files/2019-04/sequencing_handbook_FLR.pdf).
 
 ```{r echo=FALSE}
 library(xaringanExtra)
@@ -1090,7 +1092,7 @@ O processo automatizado de detecção de *contigs* através do algoritmo *base c
 
 Após o alinhamento múltiplo das sequências, é preciso reconferir os cromatogramas das sequências montadas. Por isso, é fundamental salvá-las no *software* utilizado. Cada *software* salvará como um arquivo específico, que não pode ser lido por outros programas. A tarefa de reconferir as montagens após o alinhamento múltiplo é trabalhosa, mas essencial para a correta codificação das homologias moleculares, uma vez que nem sempre e nem em todas os `loci` apresentam uma resolução inequívoca.
 
-O código de ambiguidade de nucleotídeos foi estabelecido pela IUPAC durante o Comitê de Nomenclatura da União Internacional de Bioquímica (NC-IUB), em 1984 `r Citet(referencias, "Cornish-Bowden")`.
+O código de ambiguidade de nucleotídeos foi estabelecido pela IUPAC durante o Comitê de Nomenclatura da União Internacional de Bioquímica (NC-IUB), em 1984 `r Cite(referencias, "Cornish-Bowden")`.
 
 ![](images/iupac.png)
 
@@ -1300,6 +1302,7 @@ Binário
 Multiestados
 
 ![](images/indels_mcic.png)
+
 ## Prática
 
 
