--- a/myBib.bib
+++ b/myBib.bib
@@ -140,7 +140,7 @@
  
 @misc{ePING,
     author = "{Programa de Governo Eletr\{^}onico Brasileiro}",
-    title = "Padr\{~}oes de Interoperabilidade de Governo Eletr\{^}onico - ePING --- Vers\{~}ao 2018",
+    title = "Padr\~oes de Interoperabilidade de Governo Eletr\^onico - ePING --- Vers\~ao 2018",
     year = "2022",
     url = "https://eping.governoeletronico.gov.br",
     note = "[Online; accessed 13-September-2022]"
@@ -326,8 +326,8 @@
 
 @article{Souza_Alvarenga_2004,
     author = {Souza, R.R. and Alvarenga, L.},
-    title = {A Web Sem\{^}antica e suas contribui\{c}c\{~}oes para a ci\{^}encia da informa\{c}\{~}ao},
-    journal = {Ci. Inf., Bras\{'}ilia},
+    title = {A Web Sem\^antica e suas contribui\{c}c\~oes para a ci\^encia da informa\{c}c\~ao},
+    journal = {Ci. Inf., Bras\'ilia},
     volume = 33,
     number = 1,
     pages = {132--141},
@@ -336,7 +336,7 @@
 
 @article{Almeida_2002,
     author = {Almeida, M.B.},
-    title = {Uma introdu\{c}\{~}ao ao XML, sua utiliza\{c}c\{~}ao na Internet e alguns conceitos complementares},
+    title = {Uma introdu\{c}c\~ao ao XML, sua utiliza\{c}c\~ao na Internet e alguns conceitos complementares},
     journal = {Ci. Inf., Bras\{'}ilia},
     volume = 31,
     number = 2,
@@ -380,7 +380,7 @@
   volume = {68},
   number = {4},
   pages = {594--606},
-  author = {Matthew G Johnson and Lisa Pokorny and Steven Dodsworth and Laura R Botigu{\'{e}} and Robyn S Cowan and Alison Devault and Wolf L Eiserhardt and Niroshini Epitawalage and F{\'{e}}lix Forest and Jan T Kim and James H Leebens-Mack and Ilia J Leitch and Olivier Maurin and Douglas E Soltis and Pamela S Soltis and Gane Ka-shu Wong and William J Baker and Norman J Wickett},
+  author = {Matthew G Johnson and Lisa Pokorny and Steven Dodsworth and Laura R Botigu\'e and Robyn S Cowan and Alison Devault and Wolf L Eiserhardt and Niroshini Epitawalage and F{\'{e}}lix Forest and Jan T Kim and James H Leebens-Mack and Ilia J Leitch and Olivier Maurin and Douglas E Soltis and Pamela S Soltis and Gane Ka-shu Wong and William J Baker and Norman J Wickett},
   editor = {Susanne Renner},
   title = {A Universal Probe Set for Targeted Sequencing of 353 Nuclear Genes from Any Flowering Plant Designed Using k-Medoids Clustering},
   journal = {Systematic Biology}
@@ -388,7 +388,7 @@
 
 @misc{wikiCirculoViena,
     author = "{Wikipedia contributors}",
-    title = "C\'{i}rculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
+    title = "C\'irculo de Viena --- {Wikipedia}{,}The Free Encyclopedia",
     year = "2022",
     url = "https://pt.wikipedia.org/wiki/C%C3%ADrculo_de_Viena",
     note = "[Online; accessed 15-September-2022]"
@@ -400,9 +400,43 @@
   year = {2014},
   month = nov,
   publisher = {{OpenEdition}},
-  number = {24},
+  volume = {24},
   pages = {27--32},
   author = {Madel T. Luz},
-  title = {Impactos da tecnoci{\^{e}}ncia nos saberes,  na cultura da vida e sa{\'{u}}de1},
-  journal = {Forum Sociol{\'{o}}gico}
+  title = {Impactos da tecnoci\^encia nos saberes, na cultura da vida e sa\'ude},
+  journal = {Forum Sociol\'ogico}
 }
+
+@article{Santos_Klassa2012,
+  doi = {10.4000/sociologico.1007},
+  url = {https://doi.org/10.1590/S1678-31662012000300008},
+  year = {2012},
+  number = {3},
+  volume = 10,
+  pages = {593--612},
+  author = {Santos, Charles Morphy Dias and Klassa, Bruna},
+  title = {Sistem\'atica filogen\'etica hennigiana: revolu\{c}c\~ao ou mudan\{c}ca no interior de um paradigma?},
+  journal = {Scientiae Studia [online]}
+}
+
+@article{Santos2008,
+  doi = {10.4000/sociologico.1007},
+  url = {https://doi.org/10.1590/S1678-31662008000200003},
+  year = {2008},
+  number = 6,
+  volume = 2,
+  pages = {179--200},
+  author = {Santos, Charles Morphy Dias},
+  title = {Os dinossauros de Hennig: sobre a import\^ancia do monofiletismo para a sistem\'atica biol\'gica},
+  journal = {Scientiae Studia [online]}
+}
+
+@Thesis{Terra2010,
+  url = {http://www.uesc.br/eventos/ivseminariohfc/resumos/otriunfodacladistica.pdf},
+  date = {2010},
+  author = {Paulo S. Terra},
+  institution = {Bahia: Universidade Estadual de Santa Cruz},
+  title = {O triunfo da clad\'istica: a an\'alise do embate te\'orico ocorrido na sistem\'atica biol\'ogica na segunda metade do s\'eculo xx},
+  type = {IV Semin\'ario de Hist\'oria e Filosofia da Ci\^encia}
+}
+
