--- a/myBib.bib
+++ b/myBib.bib
@@ -124,7 +124,7 @@
 
 @misc{wikiInteroperabilidadeSemantica,
     author = "{Wikipedia contributors}",
-    title = "Interoperabilidade sem\{^}antica --- {Wikipedia}{,}The Free Encyclopedia",
+    title = "Interoperabilidade sem\^{a}ntica --- {Wikipedia}{,}The Free Encyclopedia",
     year = "2022",
     url = "{https://pt.m.wikipedia.org/wiki/Interoperabilidade{\_}sem%C3%A2ntica}",
     note = "[Online; accessed 12-September-2022]"
@@ -139,8 +139,8 @@
 }
  
 @misc{ePING,
-    author = "{Programa de Governo Eletr\{^}onico Brasileiro}",
-    title = "Padr\~oes de Interoperabilidade de Governo Eletr\^onico - ePING --- Vers\~ao 2018",
+    author = "{Programa de Governo Eletr\^{o}nico Brasileiro}",
+    title = "Padr\~{o}es de Interoperabilidade de Governo Eletr\^{o}nico - ePING --- Vers\~{a}o 2018",
     year = "2022",
     url = "https://eping.governoeletronico.gov.br",
     note = "[Online; accessed 13-September-2022]"
@@ -326,8 +326,8 @@
 
 @article{Souza_Alvarenga_2004,
     author = {Souza, R.R. and Alvarenga, L.},
-    title = {A Web Sem\^antica e suas contribui\{c}c\~oes para a ci\^encia da informa\{c}c\~ao},
-    journal = {Ci. Inf., Bras\'ilia},
+    title = {A Web Sem\^{a}ntica e suas contribui\{c}{c}\~{o}es para a ci\^{e}ncia da informa\{c}{c}\~{a}o},
+    journal = {Ci. Inf., Bras\'{i}lia},
     volume = 33,
     number = 1,
     pages = {132--141},
@@ -336,8 +336,8 @@
 
 @article{Almeida_2002,
     author = {Almeida, M.B.},
-    title = {Uma introdu\{c}c\~ao ao XML, sua utiliza\{c}c\~ao na Internet e alguns conceitos complementares},
-    journal = {Ci. Inf., Bras\{'}ilia},
+    title = {Uma introdu\{c}{c}\~{a}o ao XML, sua utiliza\{c}{c}\~{a}o na Internet e alguns conceitos complementares},
+    journal = {Ci. Inf., Bras\'{i}lia},
     volume = 31,
     number = 2,
     pages = {5--13},
@@ -353,7 +353,7 @@
   volume = {31},
   number = {2},
   pages = {191--198},
-  author = {Markus Gastauer and Jo{\~{a}}o Augusto Alves Meira Neto},
+  author = {Markus Gastauer and Jo\~{a}o Augusto Alves Meira Neto},
   title = {Updated angiosperm family tree for analyzing phylogenetic diversity and community structure},
   journal = {Acta Botanica Brasilica}
 }
@@ -403,8 +403,8 @@
   volume = {24},
   pages = {27--32},
   author = {Madel T. Luz},
-  title = {Impactos da tecnoci\^encia nos saberes, na cultura da vida e sa\'ude},
-  journal = {Forum Sociol\'ogico}
+  title = {Impactos da tecnoci\^{e}ncia nos saberes, na cultura da vida e sa\'{u}de},
+  journal = {Forum Sociol\'{o}gico}
 }
 
 @article{Santos_Klassa2012,
@@ -415,7 +415,7 @@
   volume = 10,
   pages = {593--612},
   author = {Santos, Charles Morphy Dias and Klassa, Bruna},
-  title = {Sistem\'atica filogen\'etica hennigiana: revolu\{c}c\~ao ou mudan\{c}ca no interior de um paradigma?},
+  title = {Sistem\'{a}tica filogen\'{e}tica hennigiana: revolu\{c}{c}\~{a}o ou mudan\{c}{c}a no interior de um paradigma?},
   journal = {Scientiae Studia [online]}
 }
 
@@ -427,7 +427,7 @@
   volume = 2,
   pages = {179--200},
   author = {Santos, Charles Morphy Dias},
-  title = {Os dinossauros de Hennig: sobre a import\^ancia do monofiletismo para a sistem\'atica biol\'gica},
+  title = {Os dinossauros de Hennig: sobre a import\^{a}ncia do monofiletismo para a sistem\'{a}tica biol\'{o}gica},
   journal = {Scientiae Studia [online]}
 }
 
@@ -436,7 +436,7 @@
   date = {2010},
   author = {Paulo S. Terra},
   institution = {Bahia: Universidade Estadual de Santa Cruz},
-  title = {O triunfo da clad\'istica: a an\'alise do embate te\'orico ocorrido na sistem\'atica biol\'ogica na segunda metade do s\'eculo xx},
-  type = {IV Semin\'ario de Hist\'oria e Filosofia da Ci\^encia}
+  title = {O triunfo da clad\'{i}stica: a an\'{a}lise do embate te\'{o}rico ocorrido na sistem\'{a}tica biol\'{o}gica na segunda metade do s\'{e}culo xx},
+  type = {IV Semin\'{a}rio de Hist\'{o}ria e Filosofia da Ci\^{e}ncia}
 }
 
